<resources>
    <string name="app_name">AulaoIFTO</string>
    <string name="titulo">Bem vindos a plataforma de estudos</string>
    <string name="textoBotaoProfessor">Professor</string>
    <string name="textoBotaoAluno">Aluno</string>
    <string name="titulo_cadastro">Cadastro</string>
    <string name="campo_nome">Nome</string>
    <string name="campo_email">E-mail</string>
    <string name="campo_senha">Senha</string>
    <string name="campo_profissao">Profissao</string>
    <string name="campo_instituicao">Instituição</string>
    <string name="textoBotaoEnviar">Enviar</string>
    <string name="titulo_cadastro_aula">Cadastrar Aula</string>
    <string name="disciplina_aula">Disciplina</string>
    <string name="nivel_disciplina">Nível</string>
    <string name="textoBotaoCadastrarAula">Cadastrar</string>
    <string name="segundas">Segundas</string>
    <string name="tercas">Terças</string>
    <string name="quartas">Quartas</string>
    <string name="quintas">Quintas</string>
    <string name="sextas">Sextas</string>
    <string name="sabados">Sábados</string>
    <string name="domingos">Domingos</string>
    <string name="botaoMarcarLocal">Marcar Local</string>
    <string name="botaoConfiguracoes">Configurações</string>
    <string name="botaoVoltar">Voltar</string>
    <string name="titulo_suas_disciplinas">Disciplinas</string>
    <string name="botaoAdicionar">Adicionar</string>
    <string name="titulo_nova_disciplina">Nova Disciplina</string>
    <string name="titulo_configuracoes">Configurações</string>
    <string name="botaoEntrar">Entrar</string>
    <string name="titulo_login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="titulo_disciplinas_disponiveis">Disciplinas Disponíveis</string>
    <string name="profissaoUsuario">Profissão</string>
    <string name="nomeUsuario">Nome</string>
    <string name="botaoLocalizacao">Localização</string>
    <string name="titulo_dados_aula">Dados da Aula</string>
    <string name="campo_disciplina_tabela">Disciplina:</string>
    <string name="campo_dia_semana_tabela">Dias da semana:</string>
    <string name="campo_horario_tabela">Horário:</string>
    <string name="campo_professor_tabela">Professor:</string>
    <string name="campo_nivel_tabela">Nivel:</string>
    <string name="title_activity_maps2">Map</string>
    <string name="nome_disciplina">Nome da Disciplina</string>
    <string name="horario_disciplina">Horário</string>
    <string name="dias_semana">Dias da semana</string>
    <string name="nome_professor">Nome do Professor</string>
    <string name="titulo_alunos_cadastrados">Alunos Cadastrados</string>
    <string name="botaoCadastrarAula">Cadastrar na Aula</string>
    <string name="botaoMinhaAula">Minhas Aulas</string>
    <array name="apps">
        <item>Wathsap</item>
        <item>GMAIL</item>
        <item>Mensagem</item>
    </array>
    <string name="title_activity_visualiza_minha_aula">VisualizaMinhaAula</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="minhasDisciplinas">Minhas Aulas</string>
</resources>
