<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10sp"
    android:layout_gravity="center_horizontal"
    tools:context=".Activity4"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tituloConfiguracoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/titulo_configuracoes"
            android:gravity="center"
            android:textSize="38sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tituloNovaDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_nova_disciplina"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/campoDisciplina"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:hint="@string/disciplina_aula"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <Spinner
            android:id="@+id/campoNivel"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:hint="@string/nivel_disciplina"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/black"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/botaoAdicionar"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:text="@string/botaoAdicionar"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="32sp"
            android:backgroundTint="#57aeff"
            android:layout_marginBottom="40sp"
            android:onClick="criar"/>

        <TextView
            android:id="@+id/tituloSuasDisciplinas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_suas_disciplinas"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="240sp"
            android:gravity="center">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaSuasDisciplinas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        </LinearLayout>

        <Button
            android:id="@+id/botaoVoltar"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:text="@string/botaoVoltar"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:backgroundTint="#57aeff"
            android:layout_marginTop="40sp"
            android:onClick="voltar"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
