<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DadosAula">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/nomeDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome_disciplina"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/nivelDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nivel_disciplina"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/horarioDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horario_disciplina"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/diasSemanaDisciplina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dias_semana"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

</FrameLayout>