<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tituloApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/titulo"
            android:gravity="center"
            android:textSize="38sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/botaoProfessor"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:text="@string/textoBotaoProfessor"
            android:layout_gravity="center"
            android:onClick="Professor"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:backgroundTint="#57aeff"/>

        <Button
            android:id="@+id/botaoAluno"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:text="@string/textoBotaoAluno"
            android:layout_gravity="center"
            android:onClick="aluno"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginTop="10sp"
            android:backgroundTint="#57aeff"/>
    </LinearLayout>
</RelativeLayout>
