<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:layout_gravity="center_horizontal"
    tools:context=".Activity3Dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/nomeUsuarioDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomeUsuario"
            android:gravity="center"
            android:textSize="38sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/profissaoUsuarioDashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/profissaoUsuario"
            android:gravity="center"
            android:textSize="28sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tituloDisciplinasDisponiveis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_disciplinas_disponiveis"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaDisciplinasDisponiveis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/botaoAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:src="@drawable/icone_mais"
            android:contentDescription="@string/botaoConfiguracoes"
            android:layout_marginTop="40sp"
            android:backgroundTint="#57aeff"
            app:fabCustomSize="80sp"
            app:maxImageSize="60sp"
            app:tint="@color/white"
            android:onClick="cadastrarAula"/>
    </LinearLayout>
</RelativeLayout>